Fix scrollbars sometimes appearing in EPUB paginated mode

--- a/src/dom/epub/stylesheets/content.css
+++ b/src/dom/epub/stylesheets/content.css
@@ -28,7 +28,7 @@ body.scrolled > .sections > .section-container {
 
 body.paginated {
 	margin: 40px !important;
-	overflow: clip;
+	overflow: hidden;
 	overscroll-behavior: none;
 }
 
